@@ -2,7 +2,6 @@ TODO items and future ideas.
 
 - Test on different architectures
 - improve theming
-    - centered text
     - fix rendering of tiny windows (overlapping parts)
 - katriarc, a client for supplying runtime configuration. Would have to
   work the way herbstclient does (creating a window). Would free you
